<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_daftar"
                    style="@style/Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginTop="20dp"
                    android:text="Daftar"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_daftar_untuk_melanjutkan"
                    style="@style/SubSubHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginTop="10dp"
                    android:text="Daftar untuk melanjutkan"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_daftar" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_daftar_email"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="20dp"
                    android:hint="Email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_daftar_untuk_melanjutkan"
                    app:startIconDrawable="@drawable/icon_email2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_daftar_email"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_daftar_nama"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="10dp"
                    android:hint="Nama"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/il_daftar_email"
                    app:startIconDrawable="@drawable/icon_person2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_daftar_nama"
                        android:layout_width="match_parent"
                        android:layout_height="55dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_daftar_telepon"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="10dp"
                    android:hint="Telepon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/il_daftar_nama"
                    app:startIconDrawable="@drawable/icon_phone2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_daftar_telepon"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_daftar_password"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="10dp"
                    android:hint="Password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/il_daftar_telepon"
                    app:startIconDrawable="@drawable/icon_lock2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_daftar_password"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_daftar_cpassword"
                    style="@style/TextInputLayoutStyle"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:hint="Confirm password"
                    app:helperText=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/il_daftar_password"
                    app:startIconDrawable="@drawable/icon_lock2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_daftar_cpassword"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cb_show_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lihat password"
                    app:layout_constraintStart_toStartOf="@id/il_daftar_cpassword"
                    app:layout_constraintTop_toBottomOf="@id/il_daftar_cpassword" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_daftar"
                    style="@style/SubSubHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/margin_start_end"
                    android:background="@drawable/selector_login_btn"
                    android:text="Daftar"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cb_show_pass" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/ll_posered_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/tv_sudah_punya_akun"
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Sudah punya akun"
                    app:layout_constraintTop_toBottomOf="@id/bt_daftar" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_sudah_punya_akun"
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="Masuk"
                    android:textAllCaps="false"
                    android:textColor="@color/green"
                    app:layout_constraintTop_toBottomOf="@id/bt_daftar" />
            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            tools:visibility="visible"
            android:visibility="gone"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>