...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_logo"
                    app:startIconDrawable="@drawable/icon_email2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_masuk_email"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/il_masuk_email"
                    app:startIconDrawable="@drawable/icon_lock2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_masuk_password"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
...
                    android:layout_height="wrap_content"
                    android:text="Lihat password"
                    app:layout_constraintStart_toStartOf="@id/il_masuk_password"
                    app:layout_constraintTop_toBottomOf="@id/il_masuk_password" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_masuk"
                    style="@style/SubSubHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="@dimen/margin_start_end"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Belum punya akun" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_blm_punya_akun"
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="Daftar"
...
