...
    <string name="select_photo">Pilih foto</string>
    <string name="tulis_thread">Tulis thread</string>
    <string name="delete_image">Hapus gambar</string>
    <string name="keluar">Keluar</string>
    <string name="yakin_ingin_keluar">Yakin ingin keluar?</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="ketik_sesuatu">Ketik sesuatu</string>
    <string name="chat_bot">Chat bot</string>
    <string name="error_getting_respon">Error mendapatkan respon</string>
    <string name="hello_im_chatbot_nwhat_can_i_help_you">hello im chatbot, \nwhat can i help you?</string>
    <string name="initial_chat">Selamat datang di chatbot. Ada yang ingin ditanyakan?</string>
    <string name="hallo_name">Halo %1$s</string>
...
