...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:background="@drawable/selector_logout"
                android:button="@android:color/transparent" />
...
